WIP - Added platform switch to build against Paper or Spigot